# opti-eeg

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
src/opti-eeg/: config_template.json  fixed_config_path.json  get_gradcam.py  optuna_params.py  pyproject.toml  requirements.txt  run_data_preprocessing.py  run_optieeg.py
src/opti-eeg/models/: eegnet_modular.py
src/opti-eeg/scripts/: activations.py  custom_nn_modules.py  data_utils.py  eval_metrics.py  losses.py  model_pieces.py  opt_utils.py  optimizers.py  poolings.py  regularizers.py  schedulers.py  train_utils.py  utils.py
tests/: conftest.py  fixed_params_eegnet.json  test_fixed_param_run.py
