[project]
name = "opti-eeg"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "matplotlib>=3.10.7",
    "scipy>=1.16.3",
    "scikit-learn>=1.8.0",
    "optuna>=4.6.0",
    "wandb>=0.23.1",
    "tqdm",
    "parse",
    "flatten-dict",
    "breesy",
]

[dependency-groups]
dev = [
    "pytest",
    "torch",
]
